# rag-from-scratch-to-advance

./: .gitignore  README.md
01_foundations/: pyproject.toml
01_foundations/app/: constants.py  main.py
01_foundations/app/chunking/: chunking.py
01_foundations/app/ingestion/: models.py  pipeline.py
01_foundations/app/ingestion/cleaners/: cleaner.py
01_foundations/app/ingestion/loaders/: docx_loader.py  loader.py
01_foundations/app/ingestion/parsers/: parser.py
01_vanilla_foundations/: Readme.md  pyproject.toml
01_vanilla_foundations/app/: constants.py
01_vanilla_foundations/app/ingestion/: pipeline.py
01_vanilla_foundations/app/ingestion/cleaners/: unicode_cleaner.py
01_vanilla_foundations/app/ingestion/loaders/: pdf_loader.py
01_vanilla_foundations/app/ingestion/parsers/: layout_parser.py
