[project]
name = "vanilla-foundations"
version = "0.1.0"
description = "RAG from scratch vanilla foundations"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
]

[project.scripts]
rag = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
